--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script>
     async function fetchVisitorCount() {
       try {
-        const response = await fetch('https://okpozu155-bn0enzbzn-okpozu155s-projects.vercel.app');
+        const response = await fetch('https://okpozu155.vercel.app/');  #  https://okpozu155-bn0enzbzn-okpozu155s-projects.vercel.app
         const data = await response.json();
         document.getElementById('visitor-count').textContent = data.count;
       } catch (error) {
