--- a/index.html
+++ b/index.html
@@ -26,8 +26,25 @@
     
     <p>Here are links to some repositories that I have (They are very few but everyone however great they are today started some where somehow).</p>
     
-    <p>Expenses Calculator: This an application built python library Streamlit and Mongodb database https://github.com/okpozu155/expense_web_app.</p>
-    <p>Image Identifier: An interactive application in docker!!! Upload your image, the ask any question about the image. this AI app gives you answers based on your image.</p>
+  <ul>
+            <li>
+                <strong>Expenses Calculator:</strong> This is an application built with the Python library Streamlit and MongoDB database.
+                <a href="https://github.com/okpozu155/expense_web_app" target="_blank">View on GitHub</a>
+            </li>
+            <li>
+                <strong>Image Identifier:</strong> A Dockerized application that utilizes the ViLT (Vision-and-Language Transformer) model, specifically ViltProcessor and ViltForQuestionAns>
+                <a href="https://github.com/okpozu155/image_identifier/tree/main" target="_blank">View on GitHub</a>
+            </li>
+            <li>
+                <strong>Real-time Wall Clock:</strong> This project creates a real-time wall clock using Python's turtle graphics module. The clock features a circular face, hour markers, a>
+                <a href="https://github.com/okpozu155/turtle_clock/tree/main" target="_blank">View on GitHub</a>
+            </li>
+            <li>
+                <strong>Wall Clock Simulation:</strong> This project creates a real-time Wall Clock using Python's turtle graphics module.
+                <a href="https://github.com/okpozu155/turtle_clock" target="_blank">View on GitHub</a>
+            </li>
+        </ul>
+
 
   <p>Number of Visitors:</p>
   <div id="visitor-count">Loading...</div>
