--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <h3>Welcome to my GitHub.io Page!</h3>
- <div id="projects">Below are my works</div>
+ <div id="projects">Below are a few of my works</div>
   <p> Here I'll be posting links to a few of my projects that I find time to post to Github. 
     There is no criteria or preference just any work of mine that I feel like keeping or showing to the world. 
     
